# CSCI3100-Group-5

./: .gitignore  Dockerfile  Gemfile  LICENSE  README.md
.github/workflows/: backend-tests.yml  ci.yml
app/channels/: booking_channel.rb
app/controllers/: home_controller.rb
app/mailers/: application_mailer.rb  booking_mailer.rb
app/models/: booking.rb  (+7 more)
backend/: .env  ACCEPTANCE_REPORT.md  DELIVERY_CHECKLIST.md  DEVELOPMENT_GUIDE.md  Dockerfile  FRONTEND_GUIDE.md  PROJECT_PLAN.md  QUICKSTART.md  README.md  alembic.ini  dev_tools.py  docker-compose.yml  init_db.py  pyproject.toml  quickstart.sh  requirements.txt  test_api.py
backend/app/: __init__.py  auth.py  celery_config.py  config.py  database.py  main.py  models.py  schemas.py  services.py  tasks.py
backend/app/models/: __init__.py  booking.py  department.py  resource.py  user.py  waitlist.py
backend/app/routes/: admin.py  ai.py  auth.py  booking.py  bookings.py  equipment.py  venues.py
backend/app/schemas/: booking.py
backend/app/services/: booking_service.py
backend/app/utils/: ai_consultant.py  email.py
backend/tests/: conftest.py  test_admin.py  test_ai.py  test_auth.py  test_booking.py  test_bookings.py  test_conflicts.py  test_email.py  test_equipment.py  test_tasks.py  test_venues.py  text_main.py
config/: credentials.yml.enc  database.yml  routes.rb
db/: schema.rb  seeds.rb
features/: admin.feature  authentication.feature  booking.feature  check_in.feature  force_cancel.feature  recurring_booking.feature  search.feature
public/: i18n.js
spec/: rails_helper.rb  spec_helper.rb
(+95 files in other folders)
